--- a/config.yaml
+++ b/config.yaml
@@ -8,11 +8,11 @@ tDR_file: "sRNA-indexes/tDR/tDR_55.fa"
 outdir: "results"
 
 # Reference sequence and index path
-INDEX_BT: "sRNA-indexes/miRNA/mature_ref"
-INDEX_pre_BT: "sRNA-indexes/premiRNA/premirna"
-INDEX: "sRNA-indexes/tDR/tDR_55"
-INDEX_rRNA_BT: "sRNA-indexes/rRF/rRNA.flank"
-INDEX_snoRNA_BT: "sRNA-indexes/sncRNA/other.sncRNA"
+INDEX_BT: "sRNA-index/miRNA/mature_ref"
+INDEX_pre_BT: "sRNA-index/premiRNA/premirna"
+INDEX: "sRNA-index/tDR/tDR_55"
+INDEX_rRNA_BT: "sRNA-index/rRF/rRNA.flank"
+INDEX_snoRNA_BT: "sRNA-index/sncRNA/other.sncRNA"
 MINTplate: "MINTplates.py"
 
 # tools path（If environment variables have been configured in the user environment, you do not need to write absolute paths）
