--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@
 # Data path
 # 样本列表文件，文件中每一行写一个 fastq 文件的完整路径
 sample_list: "sample.txt"
-tDR_file: "sRNA-indexes/tDR/tDR_55.fa"
+tDR_file: "sRNA-index/tDR/tDR_55.fa"
 
 # output path（可统一放在 results/ 下）
 outdir: "results"
